--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scanwifi",
+  "name": "WifiPi",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -14,6 +14,12 @@
     "lodash": "^4.17.11",
     "node-wifi": "^2.0.5",
     "request": "^2.88.0",
-    "requestretry": "^4.0.0"
+    "requestretry": "^4.0.0",
+    "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2"
   }
 }
