--- a/conf_file/initializeAccesspoint.conf
+++ b/conf_file/initializeAccesspoint.conf
@@ -1,3 +1,5 @@
+#prevent sleeping
+sudo cp lightdm.conf /etc/lightdm/lightdm.conf
 # initialization accessPoint
 echo "start"
 sudo apt-get update
@@ -22,3 +24,5 @@ sudo sh -c "iptables-save > /etc/iptables.ipv4.nat"
 sudo cp rc.local /etc/rc.local
 sudo service hostapd start  
 sudo service dnsmasq start
+
+#sudo apt-get install chromium-browser --yes
