change path accessPoint script

--- a/conf_file/accessPoint_stop.conf
+++ b/conf_file/accessPoint_stop.conf
@@ -1,10 +1,10 @@
 # stop accessPoint
-echo "start"
-sudo cp ~/Desktop/scanWifi/conf_file/interfaces.accessPoint /etc/network/interfaces
+echo "start accessPoint_stop"
+sudo cp ~/Desktop/WifiPi/conf_file/interfaces.accessPoint /etc/network/interfaces
 sudo ifdown wlan0
-sudo cp ~/Desktop/scanWifi/conf_file/interfaces.orig /etc/network/interfaces
-sudo cp ~/Desktop/scanWifi/conf_file/dhcpcd.conf.orig /etc/dhcpcd.conf
+sudo cp ~/Desktop/WifiPi/conf_file/interfaces.orig /etc/network/interfaces
+sudo cp ~/Desktop/WifiPi/conf_file/dhcpcd.conf.orig /etc/dhcpcd.conf
 sudo service dhcpcd restart
 sudo service hostapd stop
 sudo service dnsmasq stop
-echo "end"
+echo "end accessPoint_stop"
