--- a/conf_file/accessPoint_restart.conf
+++ b/conf_file/accessPoint_restart.conf
@@ -1,11 +1,11 @@
 # relaunch accessPoint
-echo "start"
+echo "start accessPoint_restart"
 sudo ifdown wlan0
-sudo cp ~/Desktop/scanWifi/conf_file/interfaces.orig /etc/network/interfaces
-sudo cp ~/Desktop/scanWifi/conf_file/dhcpcd.conf.accessPoint /etc/dhcpcd.conf
+sudo cp ~/Desktop/WifiPi/conf_file/interfaces.orig /etc/network/interfaces
+sudo cp ~/Desktop/WifiPi/conf_file/dhcpcd.conf.accessPoint /etc/dhcpcd.conf
 sudo service dhcpcd restart
-sudo cp ~/Desktop/scanWifi/conf_file/interfaces.accessPoint /etc/network/interfaces
+sudo cp ~/Desktop/WifiPi/conf_file/interfaces.accessPoint /etc/network/interfaces
 sudo ifup wlan0
 sudo service hostapd start
 sudo service dnsmasq start
-echo "end"
+echo "end accessPoint_restart"
