improve stop/restart access point

--- a/conf_file/accessPoint_restart.conf
+++ b/conf_file/accessPoint_restart.conf
@@ -1,5 +1,6 @@
 # relaunch accessPoint
 echo "start accessPoint_restart"
+sudo ifup wlan0
 sudo ifdown wlan0
 sudo cp ~/Desktop/WifiPi/conf_file/interfaces.orig /etc/network/interfaces
 sudo cp ~/Desktop/WifiPi/conf_file/dhcpcd.conf.accessPoint /etc/dhcpcd.conf
