--- a/conf_file/accessPoint_stop.conf
+++ b/conf_file/accessPoint_stop.conf
@@ -1,6 +1,7 @@
 # stop accessPoint
 echo "start accessPoint_stop"
 sudo cp ~/Desktop/WifiPi/conf_file/interfaces.accessPoint /etc/network/interfaces
+sudo ifup wlan0
 sudo ifdown wlan0
 sudo cp ~/Desktop/WifiPi/conf_file/interfaces.orig /etc/network/interfaces
 sudo cp ~/Desktop/WifiPi/conf_file/dhcpcd.conf.orig /etc/dhcpcd.conf
