--- a/conf_file/initializeAccesspoint.conf
+++ b/conf_file/initializeAccesspoint.conf
@@ -2,9 +2,9 @@
 sudo cp lightdm.conf /etc/lightdm/lightdm.conf
 # initialization accessPoint
 echo "start"
-sudo apt-get update
-sudo apt-get upgrade
-sudo apt-get install dnsmasq hostapd
+#sudo apt-get update
+#sudo apt-get upgrade
+#sudo apt-get install dnsmasq hostapd
 sudo ifdown wlan0
 sudo cp interfaces.orig /etc/network/interfaces
 sudo cp dhcpcd.conf.accessPoint /etc/dhcpcd.conf
