--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
+    "node-cron": "^2.0.3",
     "node-wifi": "^2.0.5",
     "request": "^2.88.0",
     "requestretry": "^4.0.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
