--- a/conf_file/accessPoint_restart.conf
+++ b/conf_file/accessPoint_restart.conf
@@ -1,4 +1,4 @@
-# relaunch accessPoint
+# relaunch accessPoint LF
 echo "start accessPoint_restart"
 sudo ifup wlan0
 sudo ifdown wlan0
@@ -9,4 +9,5 @@ sudo cp ~/Desktop/WifiPi/conf_file/interfaces.accessPoint /etc/network/interface
 sudo ifup wlan0
 sudo service hostapd start
 sudo service dnsmasq start
+sleep 5
 echo "end accessPoint_restart"
