--- a/conf_file/accessPoint_stop.conf
+++ b/conf_file/accessPoint_stop.conf
@@ -1,4 +1,4 @@
-# stop accessPoint
+# stop accessPoint LF
 echo "start accessPoint_stop"
 sudo cp ~/Desktop/WifiPi/conf_file/interfaces.accessPoint /etc/network/interfaces
 sudo ifup wlan0
@@ -8,4 +8,5 @@ sudo cp ~/Desktop/WifiPi/conf_file/dhcpcd.conf.orig /etc/dhcpcd.conf
 sudo service dhcpcd restart
 sudo service hostapd stop
 sudo service dnsmasq stop
+sleep 5
 echo "end accessPoint_stop"
