add stop accessPoint for security+ sleep conf

--- a/conf_file/accessPoint_restart.conf
+++ b/conf_file/accessPoint_restart.conf
@@ -1,11 +1,16 @@
 # relaunch accessPoint LF
 echo "start accessPoint_restart"
 sudo ifup wlan0
+sleep 1
 sudo ifdown wlan0
+sleep 1
 sudo cp ~/Desktop/WifiPi/conf_file/interfaces.orig /etc/network/interfaces
 sudo cp ~/Desktop/WifiPi/conf_file/dhcpcd.conf.accessPoint /etc/dhcpcd.conf
+sleep 1
 sudo service dhcpcd restart
+sleep 1
 sudo cp ~/Desktop/WifiPi/conf_file/interfaces.accessPoint /etc/network/interfaces
+sleep 1
 sudo ifup wlan0
 sudo service hostapd start
 sudo service dnsmasq start
