--- a/conf_file/accessPoint_stop.conf
+++ b/conf_file/accessPoint_stop.conf
@@ -1,12 +1,18 @@
 # stop accessPoint LF
 echo "start accessPoint_stop"
 sudo cp ~/Desktop/WifiPi/conf_file/interfaces.accessPoint /etc/network/interfaces
+sleep 1
 sudo ifup wlan0
+sleep 1
 sudo ifdown wlan0
+sleep 1
 sudo cp ~/Desktop/WifiPi/conf_file/interfaces.orig /etc/network/interfaces
 sudo cp ~/Desktop/WifiPi/conf_file/dhcpcd.conf.orig /etc/dhcpcd.conf
+sleep 1
 sudo service dhcpcd restart
+sleep 1
 sudo service hostapd stop
+sleep 1
 sudo service dnsmasq stop
 sleep 5
 echo "end accessPoint_stop"
