--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cec-controller": "^1.4.0",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "lodash": "^4.17.15",
